--- a/resources/style.css
+++ b/resources/style.css
@@ -79,6 +79,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    will-change: transform;
+    overflow-x: clip;
 }
 
 .plane-overlay svg {
@@ -87,7 +89,6 @@ p {
     fill: var(--plane-color);
     transform: translateY(100%) scale(0.2);
     transition: transform 0.1s linear, fill 0.3s ease;
-    /* margin-top: 100px; */
 }
 
 /* Content */
@@ -217,6 +218,12 @@ section {
   background: #eaeaea;
 }
 
+.timeline-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .timeline-content{
     padding: 20px;
 }
@@ -254,10 +261,16 @@ section {
   box-shadow: 0 10px 25px rgba(42, 111, 219, 0.35);
 }
 
+.card-image,
+.timeline-image{
+    box-shadow: 10px 10px 10px rgba(6, 16, 32, 0.1);
+}
+
 @media (max-width: 768px) {
 
   .card.with-image,
-  .card.profile-card {
+  .card.profile-card,
+  .timeline-content {
     flex-direction: column;
     align-items: center; /* ⬅️ center children */
     text-align: left;
@@ -265,7 +278,8 @@ section {
 
   /* Center image container */
   .card-image,
-  .profile-image {
+  .profile-image,
+  .timeline-image {
     width: 100%;
     aspect-ratio: 4/3;
     max-width: 250px;
@@ -274,7 +288,8 @@ section {
 
   /* Text stays full width */
   .card-content,
-  .profile-content {
+  .profile-content,
+  .timeline-content-text {
     width: 100%;
   }
 }
