--- a/resources/style.css
+++ b/resources/style.css
@@ -324,6 +324,10 @@ section {
 
 @media (max-width: 768px) {
 
+  .card{
+    padding: 10px;
+  }
+
   .card.with-image,
   .card.profile-card,
   .timeline-content {
