--- a/resources/style.css
+++ b/resources/style.css
@@ -52,6 +52,57 @@ p {
     color: #495057; /* Slightly muted text */
 }
 
+/* Clouds container */
+.clouds {
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+/* Cloud base style */
+.cloud {
+  position: absolute;
+  width: 300px;
+  fill: rgba(255, 255, 255, 1);
+  filter: blur(20px);
+  opacity: 0.7;
+}
+
+/* Cloud positions */
+.cloud-1 {
+  top: 1%;
+  left: -0%;
+  width: 500px;
+  animation: moveCloudLeft 22s ease-in-out infinite alternate;
+}
+
+.cloud-2 {
+  top: 50%;
+  right: 0%;
+  width: 700px;
+  animation: moveCloudRight 30s ease-in-out infinite alternate;
+}
+
+.cloud-3 {
+  top: 20%;
+  right: 20%;
+  width: 300px;
+  animation: moveCloudRight 26s ease-in-out infinite alternate;
+}
+
+/* Animations */
+@keyframes moveCloudLeft {
+  from { transform: translateX(0); }
+  to { transform: translateX(500px); }
+}
+
+@keyframes moveCloudRight {
+  from { transform: translateX(100px); }
+  to { transform: translateX(-500px); }
+}
+
 /* Hero Section */
 .hero {
     position: relative;
