--- a/resources/style.css
+++ b/resources/style.css
@@ -47,7 +47,7 @@ h2 {
 }
 
 p {
-    max-width: 800px;
+    /* max-width: 800px; */
     line-height: 1.6;
     color: #495057; /* Slightly muted text */
 }
@@ -56,7 +56,7 @@ p {
 .clouds {
   position: absolute;
   inset: 0;
-  z-index: 1;
+  z-index: -1;
   pointer-events: none;
   overflow: hidden;
 }
@@ -75,21 +75,35 @@ p {
   top: 1%;
   left: -0%;
   width: 500px;
-  animation: moveCloudLeft 22s ease-in-out infinite alternate;
+  animation: moveCloudLeft 35s infinite alternate;
 }
 
 .cloud-2 {
   top: 50%;
   right: 0%;
   width: 700px;
-  animation: moveCloudRight 30s ease-in-out infinite alternate;
+  animation: moveCloudRight 30s infinite alternate;
 }
 
 .cloud-3 {
   top: 20%;
   right: 20%;
   width: 300px;
-  animation: moveCloudRight 26s ease-in-out infinite alternate;
+  animation: moveCloudRight 37s infinite alternate;
+}
+
+.cloud-4 {
+  top: 15%;
+  right: 80%;
+  width: 600px;
+  animation: moveCloudLeft 40s infinite alternate;
+}
+
+.cloud-5 {
+  top: 25%;
+  right: 10%;
+  width: 750px;
+  animation: moveCloudLeft 32s infinite alternate;
 }
 
 /* Animations */
@@ -373,7 +387,7 @@ section {
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
 
   .card{
     padding: 10px;
